--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.34.2",
     "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
